Adicionado recursos sociais e páginas de interação com o usuário, Estilo Rede Social:
Estilização: Criação do arquivo social.css para componentes sociais.

Feed: Implementação do feed.jsp para exibições e interações.

Notificações: Adição da tela notificacoes.jsp.

Perfil: Criação do perfil.jsp para gestão e visualização do perfil do usuário.

Trocas: Implementação da tela trocas.jsp para gerenciar trocas e avaliações.